# actix-template

./: .env.example  Cargo.toml  README.md  docker-compose.yaml  schema.sql
src/: main.rs  routers.rs
src/controllers/: index_controllers.rs  mod.rs  todo_controllers.rs
src/infrastructure/: mod.rs
src/infrastructure/routers/: index_routers.rs  mod.rs  todo_routers.rs
src/interface/controllers/: index_controllers.rs  mod.rs  todo_controllers.rs
src/models/: index_models.rs  mod.rs  todo_models.rs
