[package]
name = "actix-web"
version = "0.1.0"
authors = ["K-jun <poittyo091221@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-cors = "0.1.0"

serde_json = "1.0.41"
serde = "1.0.41"
dotenv = "0.14.1"
mysql = "16.1.0"
log = "0.4.0"
env_logger = "0.7.0"
failure = "0.1.6"

chrono = "0.4.9"
